# nntool

./: .buildinfo  .gitignore  api.html  conftest.py  genindex.html  get_started.html  index.html  index.sh  makefile  mkdocs.yml  objects.inv  py-modindex.html  pyproject.toml  readme.md  ruff.toml  search.html  searchindex.js  setup.py  tutorials.html
.doctrees/: api.doctree  environment.pickle  get_started.doctree  index.doctree  tutorials.doctree
.doctrees/api/: nntool.experiment.config.doctree  nntool.experiment.doctree  nntool.experiment.utils.doctree  nntool.plot.context.doctree  nntool.plot.csrc.doctree  nntool.plot.csrc.latexify.doctree  nntool.plot.doctree  nntool.slurm.accelerator.doctree  nntool.slurm.accelerator.utils.doctree  nntool.slurm.config.doctree  nntool.slurm.csrc.doctree  nntool.slurm.doctree  nntool.slurm.function.doctree  nntool.slurm.parser.doctree  nntool.slurm.parser.parse.doctree  nntool.slurm.task.doctree  nntool.slurm.wrap.doctree  nntool.utils.doctree  nntool.wandb.config.doctree  nntool.wandb.doctree
.doctrees/tutorials/: distributed_training.doctree  sequential_jobs.doctree  sharp_bits.doctree
.github/workflows/: cython_wheel.yml  docs.yml  docs_and_wheel_index.yml  documentation.yml  lint.yml  pytest.yml  wheel.yml
_sources/: api.rst.txt  get_started.md.txt  index.md.txt
_sources/api/: nntool.experiment.rst.txt  nntool.plot.csrc.latexify.rst  nntool.plot.csrc.rst  nntool.plot.rst  nntool.slurm.accelerator.rst.txt  nntool.slurm.config.rst.txt  nntool.slurm.csrc.rst  nntool.slurm.function.rst.txt  nntool.slurm.parser.rst  nntool.slurm.wrap.rst  nntool.utils.rst
_sources/tutorials/: sequential_jobs.rst  sharp_bits.rst  sharp_bits.rst.txt
api/: nntool.experiment.config.html  nntool.experiment.html  nntool.experiment.utils.html  nntool.plot.context.html  nntool.plot.csrc.html  nntool.plot.csrc.latexify.html  nntool.plot.html  nntool.slurm.accelerator.html  nntool.slurm.accelerator.utils.html  nntool.slurm.config.html  nntool.slurm.csrc.html  nntool.slurm.function.html  nntool.slurm.html  nntool.slurm.parser.html  nntool.slurm.parser.parse.html  nntool.slurm.task.html  nntool.slurm.wrap.html  nntool.utils.html  nntool.wandb.config.html  nntool.wandb.html
docs/: Makefile  api.rst  conf.py  index.md  index.rst  nntool.slurm.md  nntool.wandb.md  tutorials.rst
docs/_static/: custom.css
docs/api/: nntool.experiment.config.rst  nntool.experiment.utils.rst  nntool.plot.context.rst  nntool.plot.csrc.rst  nntool.slurm.accelerator.utils.rst  nntool.slurm.parser.parse.rst  nntool.slurm.rst  nntool.slurm.task.rst  nntool.wandb.config.rst  nntool.wandb.rst
docs/documentation/: experiment.md  nntool.slurm.md  slurm.md  slurm_function.md  utils.md  wandb.md
docs/documentations/: experiment.rst  slurm.rst  utils.rst  wandb.rst
docs/examples/: distributed_training.md  distributed_training.rst  sequential_jobs.md  sequential_jobs.rst
docs/introduction/: distributed_training.rst  sequential_jobs.rst  sharp_bits.rst
docs/tutorials/: distributed_training.rst  sharp_bits.rst
docs/wheel/: index.html  nntool-0.3.4-py3-none-any.whl  nntool-0.6.1-py3-none-any.whl  nntool-1.0.2rc3-py3-none-any.whl  nntool-1.2.1-py3-none-any.whl  nntool-1.5.0-py3-none-any.whl  nntool-1.6.0-py3-none-any.whl  nntool-1.6.1-py3-none-any.whl  nntool-1.6.2-py3-none-any.whl  nntool-1.8.0-py3-none-any.whl  nntool-1.8.2-py3-none-any.whl  nntool-1.8.4-py3-none-any.whl
docs_mkdocs/examples/: sequential_jobs.md
documentations/: slurm.rst
nntool/: __init__.py  build_backend.py  config.py  config.pyi  parser.py  slurm.py  version.py  wandb.py  wandb.pyi
nntool/accelerator/: utils.py
tests/: .gitignore  env.toml  test_exp_config.py  test_experiments.py  test_latexify.py  test_parser.py  test_slurm.py  test_slurm.sh  test_utils.py  utils.py
tutorials/: distributed_training.html  sequential_jobs.html  sharp_bits.html
wheel/: nntool-0.1.0-py3-none-any.whl  nntool-0.2.3-py3-none-any.whl  nntool-0.3.0-py3-none-any.whl  nntool-0.3.2-py3-none-any.whl  nntool-0.3.3-py3-none-any.whl  nntool-0.3.5-py3-none-any.whl  nntool-0.4.0-py3-none-any.whl  nntool-0.5.0-py3-none-any.whl  nntool-0.6.0-py3-none-any.whl  nntool-0.6.2-py3-none-any.whl  nntool-0.6.3-py3-none-any.whl  nntool-0.7.0-py3-none-any.whl  nntool-0.8.0-py3-none-any.whl  nntool-1.0.0-py3-none-any.whl  nntool-1.0.1-py3-none-any.whl  nntool-1.0.2-py3-none-any.whl  nntool-1.0.2rc1-py3-none-any.whl  nntool-1.0.2rc2-py3-none-any.whl  nntool-1.1.0-py3-none-any.whl  nntool-1.1.0rc1-py3-none-any.whl  nntool-1.1.0rc2-py3-none-any.whl  nntool-1.2.0-py3-none-any.whl  nntool-1.2.2-py3-none-any.whl  nntool-1.3.0-py3-none-any.whl  nntool-1.3.1-py3-none-any.whl  nntool-1.4.0-py3-none-any.whl  nntool-1.4.1-py3-none-any.whl  nntool-1.7.0rc1-py3-none-any.whl  nntool-1.8.1-py3-none-any.whl  nntool-1.8.3-py3-none-any.whl
(+48 files in other folders)
