[build-system]
requires = ["setuptools>=68.0.0,<81.0.0", "wheel", "Cython==3.1.2"]
build-backend = "setuptools.build_meta"

[tool.ruff]
# Specify the Python version you're targeting
target-version = "py311"

# Set the maximum line length
line-length = 100

# Enable auto-fixing for specific rule categories
fix = true

# Directories to include/exclude
exclude = [
    ".bzr",
    ".direnv",
    ".eggs",
    ".git",
    ".git-rewrite",
    ".hg",
    ".mypy_cache",
    ".nox",
    ".pants.d",
    ".pytype",
    ".ruff_cache",
    ".svn",
    ".tox",
    ".venv",
    "__pypackages__",
    "_build",
    "buck-out",
    "build",
    "dist",
    "node_modules",
    "venv",
    "*.ipynb",        # Exclude notebooks from ruff checks
    "buildkit",
    "docs",
]

[tool.ruff.lint]
ignore = ["F405", "F403", "E741", "E712"]
