[build-system]
requires = ["setuptools<81.0.0", "wheel", "Cython==3.0.12"]
build-backend = "build_backend"
backend-path = ["nntool"]

[project]
name = "nntool"
dynamic = ["version"]
description = "NNTool is a package built on top of submitit designed to provide simple abstractions to conduct experiments on Slurm for machine learning research."
authors = [{ name = "Junhao Liu", email = "junhaoliu17@gmail.com" }]
keywords = ["deep learning", "neural network", "research"]
requires-python = ">=3.9"
dependencies = [
    "tyro",
    "setuptools<81.0.0",
    "submitit>=1.5.3",
    "seaborn>=0.13.2",
    "wandb>=0.15.0",
    "tomli>=2.0.1",
    "Cython==3.0.12",
    "cythonpackage==0.2.14",
]

[project.optional-dependencies]
dev = [
    "ruff",
    "accelerate",
    "pytest>=8.0.2",
    "jax[cpu]>=0.4.0",
    "torch>=2.2.0",
    "sphinx",
    "furo",
    "myst_parser",
    "sphinx-autodoc-typehints",
    "sphinx-copybutton",
]

[project.urls]
Homepage = "https://github.com/jhliu17/nntool"

[tool.setuptools.package-data]
"*" = ["!*.pyi"]

[tool.setuptools.dynamic]
version = { attr = "nntool.version.VERSION" }

[tool.ruff]
# Specify the Python version you're targeting
target-version = "py311"

# Set the maximum line length
line-length = 100

# Enable auto-fixing for specific rule categories
fix = true

# Directories to include/exclude
exclude = [
    ".bzr",
    ".direnv",
    ".eggs",
    ".git",
    ".git-rewrite",
    ".hg",
    ".mypy_cache",
    ".nox",
    ".pants.d",
    ".pytype",
    ".ruff_cache",
    ".svn",
    ".tox",
    ".venv",
    "__pypackages__",
    "_build",
    "buck-out",
    "build",
    "dist",
    "node_modules",
    "venv",
    "*.ipynb",        # Exclude notebooks from ruff checks
    "buildkit",
    "docs",
]

[tool.ruff.lint]
ignore = ["F405", "F403", "E741", "E712"]
