[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "nntool"
dynamic = ["version"]
description = "nntool is a package designed to provide seamless Python function execution on Slurm for machine learning research, with useful utilities for experiment tracking and management."
authors = [{ name = "Junhao Liu", email = "junhaoliu17@gmail.com" }]
license = { file = "LICENSE" }
readme = "readme.md"
classifiers = ["License :: OSI Approved :: MIT License"]
keywords = ["deep learning", "neural network", "research"]
requires-python = ">=3.10"
dependencies = ["tyro", "submitit>=1.5.4", "wandb>=0.15.0", "tomli>=2.0.1"]

[dependency-groups]
dev = [
    "ruff",
    "pytest>=8.4.2",
    "accelerate",
    "torch>=2.2.0",
    "sphinx",
    "furo",
    "myst_parser",
    "sphinx-autodoc-typehints",
    "sphinx-copybutton",
]

[project.urls]
Homepage = "https://github.com/jhliu17/nntool"

[tool.uv.sources]
torch = [{ index = "pytorch-cpu" }]
torchvision = [{ index = "pytorch-cpu" }]

[[tool.uv.index]]
name = "pytorch-cpu"
url = "https://download.pytorch.org/whl/cpu"
explicit = true

[tool.setuptools.packages.find]
where = ["."]
include = ["nntool*"]
exclude = ["buildkit", "docs", "tests"]

[tool.setuptools.package-data]
"*" = ["!*.pyi"]

[tool.setuptools.dynamic]
version = { attr = "nntool.version.VERSION" }

[tool.ruff]
# Specify the Python version you're targeting
target-version = "py312"

# Set the maximum line length
line-length = 100

# Enable auto-fixing for specific rule categories
fix = true

# Directories to include/exclude
exclude = [
    ".bzr",
    ".direnv",
    ".eggs",
    ".git",
    ".git-rewrite",
    ".hg",
    ".mypy_cache",
    ".nox",
    ".pants.d",
    ".pytype",
    ".ruff_cache",
    ".svn",
    ".tox",
    ".venv",
    "__pypackages__",
    "_build",
    "buck-out",
    "build",
    "dist",
    "node_modules",
    "venv",
    "*.ipynb",        # Exclude notebooks from ruff checks
    "buildkit",
    "docs",
]

[tool.ruff.lint]
ignore = ["F405", "F403", "E741", "E712"]
